[package]
name = "jni-sys-dynamic"
version = "0.3.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust definitions corresponding to jni.h"
repository = "https://github.com/sfackler/rust-jni-sys"

[dependencies]
libloading = "0.5.1"

[workspace]
members = ["systest"]
